# serializer version: 1
# name: test_send_work_item_mail[additional-data-False-False-de]
  'Neue Informationen zu 1984-0023'
# ---
# name: test_send_work_item_mail[additional-data-False-False-de].1
  '''
  Guten Tag Winston Smith
  
  Wir haben Ihren Antrag geprüft und freuen uns, Ihnen mitteilen zu können, dass wir für das unten genannte Projekt einen Rahmenkredit von CHF 23'000.- gesprochen haben.
  
  Bei Bedarf können Sie Ihren Antrag und die Kostenzusprache als PDF unter der Rubrik «Download» herunterladen.
  
  Referenz: 1984-0023
  Über den nachfolgenden Link können Sie direkt auf Ihr Dokument zugreifen, wo Sie die Angaben zu den noch benötigten Informationen finden:
  https://mysagw.local/cases/my-case-id
  
  Sollten Sie Fragen haben, können Sie uns gerne über sagw@sagw.ch, die Telefonnummer +41 31 306 92 50 oder unter www.sagw.ch/kontakt-mysagw kontaktieren. Gerne bitten wir Sie, bei einer Frage immer die Referenznummer anzugeben.
  
  Freundliche Grüsse
  
  Ihr SAGW-Team
  
  ******
  
  Dies ist eine automatisch generierte Email, bitte antworten Sie nicht auf diese Nachricht. Die Kontaktangaben der SAGW können Sie der nachfolgenden Seite entnehmen:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[additional-data-False-False-en]
  'New information concerning 1984-0023'
# ---
# name: test_send_work_item_mail[additional-data-False-False-en].1
  '''
  Dear Winston Smith
  
  After a careful review your application we are pleased to inform you that a framework credit of CHF 23'000.- has been approved for the project mentioned below.
  
  You can download your application and the approval of the framework credit as PDF files under the heading «Download».
  
  Reference: 1984-0023
  You can access your document via the following link:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us via e-mail (sagw@sagw.ch), phone (+41 31 306 92 50) or online (www.sagw.ch/kontakt-mysagw). Please bear in mind to state the reference number of your application.
  
  Yours sincerely
  
  Your SAGW team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of SASH can be found on the following website:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[additional-data-False-False-fr]
  'Nouvelles informations concernant 1984-0023'
# ---
# name: test_send_work_item_mail[additional-data-False-False-fr].1
  '''
  Bonjour Winston Smith
  
  Nous avons examiné votre demande et avons le plaisir de vous informer que nous avons accordé un crédit-cadre de CHF 23'000.- pour le projet mentionné ci-dessous.
  
  Si nécessaire, vous pouvez télécharger votre demande et la confirmation de l’octroi du financement en format PDF sous la rubrique «Download».
  
  Référence : 1984-0023
  Cliquez sur le lien ci-dessous pour ouvrir votre document:
  https://mysagw.local/cases/my-case-id
  
  Si vous avez des questions, n’hésitez pas à nous contacter à l’adresse sagw@sagw.ch, au numéro de téléphone +41 31 306 92 50 ou via www.sagw.ch/kontakt-mysagw. Nous vous prions de toujours indiquer le numéro de référence lorsque vous posez une question.
  
  Avec nos meilleures salutations,
  
  Votre équipe de l’ASSH
  
  ******
  
  Ceci est un message électronique généré automatiquement, merci de ne pas y répondre. Vous trouverez les coordonnées de l'ASSH sur la page suivante :
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[additional-data-True-False-de]
  'Neue Informationen zu 1984-0023'
# ---
# name: test_send_work_item_mail[additional-data-True-False-de].1
  '''
  Guten Tag Winston Smith
  
  Wir benötigen noch weitere Angaben zum Gesuch:
  
  Referenz: 1984-0023
  Über den nachfolgenden Link können Sie direkt auf Ihr Dokument zugreifen, wo Sie die Angaben zu den noch benötigten Informationen finden:
  https://mysagw.local/cases/my-case-id
  
  Sollten Sie Fragen haben, können Sie uns gerne über sagw@sagw.ch, die Telefonnummer +41 31 306 92 50 oder unter www.sagw.ch/kontakt-mysagw kontaktieren. Gerne bitten wir Sie, bei einer Frage immer die Referenznummer anzugeben.
  
  Freundliche Grüsse
  
  Ihr SAGW-Team
  
  ******
  
  Dies ist eine automatisch generierte Email, bitte antworten Sie nicht auf diese Nachricht. Die Kontaktangaben der SAGW können Sie der nachfolgenden Seite entnehmen:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[additional-data-True-False-en]
  'New information concerning 1984-0023'
# ---
# name: test_send_work_item_mail[additional-data-True-False-en].1
  '''
  Dear Winston Smith
  
  Please note that further information is required for the following application:
  
  Reference: 1984-0023
  You can access your document via the following link:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us via e-mail (sagw@sagw.ch), phone (+41 31 306 92 50) or online (www.sagw.ch/kontakt-mysagw). Please bear in mind to state the reference number of your application.
  
  Yours sincerely
  
  Your SAGW team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of SASH can be found on the following website:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[additional-data-True-False-fr]
  'Nouvelles informations concernant 1984-0023'
# ---
# name: test_send_work_item_mail[additional-data-True-False-fr].1
  '''
  Bonjour Winston Smith
  
  Nous avons besoin d’informations supplémentaires sur la requête suivante:
  
  Référence : 1984-0023
  Le lien ci-dessous vous permet d’accéder directement à votre document, où vous trouverez les indications sur les informations à fournir:
  https://mysagw.local/cases/my-case-id
  
  Si vous avez des questions, n’hésitez pas à nous contacter à l’adresse sagw@sagw.ch, au numéro de téléphone +41 31 306 92 50 ou via www.sagw.ch/kontakt-mysagw. Nous vous prions de toujours indiquer le numéro de référence lorsque vous posez une question.
  
  Avec nos meilleures salutations,
  
  Votre équipe de l’ASSH
  
  ******
  
  Ceci est un message électronique généré automatiquement, merci de ne pas y répondre. Vous trouverez les coordonnées de l'ASSH sur la page suivante :
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[complete-document-False-False-de]
  'Neue Informationen zu 1984-0023'
# ---
# name: test_send_work_item_mail[complete-document-False-False-de].1
  '''
  Guten Tag Winston Smith
  
  Wir haben die Abrechnung des nachfolgenden Gesuchs geprüft und können Ihnen nun in den kommenden Tagen folgenden Beitrag auf die uns vorliegende Zahlungsverbindung überweisen:
  
  CHF 23'000.-
  
  Referenz: 1984-0023
  Über den nachfolgenden Link können Sie direkt auf Ihr Dokument zugreifen, wo Sie die Angaben zu den noch benötigten Informationen finden:
  https://mysagw.local/cases/my-case-id
  
  Sollten Sie Fragen haben, können Sie uns gerne über sagw@sagw.ch, die Telefonnummer +41 31 306 92 50 oder unter www.sagw.ch/kontakt-mysagw kontaktieren. Gerne bitten wir Sie, bei einer Frage immer die Referenznummer anzugeben.
  
  Freundliche Grüsse
  
  Ihr SAGW-Team
  
  ******
  
  Dies ist eine automatisch generierte Email, bitte antworten Sie nicht auf diese Nachricht. Die Kontaktangaben der SAGW können Sie der nachfolgenden Seite entnehmen:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[complete-document-False-False-en]
  'New information concerning 1984-0023'
# ---
# name: test_send_work_item_mail[complete-document-False-False-en].1
  '''
  Dear Winston Smith
  
  After having verified the billing of the application mentioned below, we can confirm that the following amount will be transferred according to the payment details which have been provided:
  
  CHF 23'000.-
  
  Reference: 1984-0023
  You can access your document via the following link:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us via e-mail (sagw@sagw.ch), phone (+41 31 306 92 50) or online (www.sagw.ch/kontakt-mysagw). Please bear in mind to state the reference number of your application.
  
  Yours sincerely
  
  Your SAGW team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of SASH can be found on the following website:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[complete-document-False-False-fr]
  'Nouvelles informations concernant 1984-0023'
# ---
# name: test_send_work_item_mail[complete-document-False-False-fr].1
  '''
  Bonjour Winston Smith
  
  Nous avons vérifié le décompte de la demande dont la référence figure ci-dessous. Nous verserons dans les prochains jours, sur les coordonnées de paiement dont nous disposons, le montant suivant:
  
  CHF 23'000.-
  
  Référence : 1984-0023
  Vous pouvez accéder directement à votre document en cliquant sur le lien suivant:
  https://mysagw.local/cases/my-case-id
  
  Si vous avez des questions, n’hésitez pas à nous contacter à l’adresse sagw@sagw.ch, au numéro de téléphone +41 31 306 92 50 ou via www.sagw.ch/kontakt-mysagw. Nous vous prions de toujours indiquer le numéro de référence lorsque vous posez une question.
  
  Avec nos meilleures salutations,
  
  Votre équipe de l’ASSH
  
  ******
  
  Ceci est un message électronique généré automatiquement, merci de ne pas y répondre. Vous trouverez les coordonnées de l'ASSH sur la page suivante :
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[decision-and-credit-False-False-de]
  'Neue Informationen zu 1984-0023'
# ---
# name: test_send_work_item_mail[decision-and-credit-False-False-de].1
  '''
  Guten Tag Winston Smith
  
  Die Schweizerische Akademie der Geistes- und Sozialwissenschaften (SAGW) hat Ihr oben genanntes Gesuch geprüft. Leider müssen wir Ihnen mitteilen, dass wir Ihrem Antrag nicht entsprechen können, da die formellen oder materiellen Voraussetzungen dafür nicht gegeben sind.
  
  Referenz: 1984-0023
  Über den nachfolgenden Link können Sie direkt auf Ihr Dokument zugreifen:
  https://mysagw.local/cases/my-case-id
  
  Sollten Sie Fragen haben, können Sie uns gerne über sagw@sagw.ch, die Telefonnummer +41 31 306 92 50 oder unter www.sagw.ch/kontakt-mysagw kontaktieren. Gerne bitten wir Sie, bei einer Frage immer die Referenznummer anzugeben.
  
  Freundliche Grüsse
  
  Ihr SAGW-Team
  
  ******
  
  Dies ist eine automatisch generierte Email, bitte antworten Sie nicht auf diese Nachricht. Die Kontaktangaben der SAGW können Sie der nachfolgenden Seite entnehmen:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[decision-and-credit-False-False-en]
  'New information concerning 1984-0023'
# ---
# name: test_send_work_item_mail[decision-and-credit-False-False-en].1
  '''
  Dear Winston Smith
  
  The Swiss Academy of Humanities and Social Sciences (SAGW/SAHS) has reviewed your request. Unfortunately, we have to inform you that your request cannot be granted since the formal or the material criteria are not being fulfilled.
  
  Reference: 1984-0023
  You can access your document via the following link:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us via e-mail (sagw@sagw.ch), phone (+41 31 306 92 50) or online (www.sagw.ch/kontakt-mysagw). Please bear in mind to state the reference number of your application.
  
  Yours sincerely
  
  Your SAGW team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of SASH can be found on the following website:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[decision-and-credit-False-False-fr]
  'Nouvelles informations concernant 1984-0023'
# ---
# name: test_send_work_item_mail[decision-and-credit-False-False-fr].1
  '''
  Bonjour Winston Smith
  
  L’Académie suisse des sciences humaines et sociales (ASSH) a examiné votre requête susmentionnée. Malheureusement, nous devons vous informer que nous ne pouvons pas donner suite à votre demande, car les conditions formelles ou les conditions matérielles pour un soutien ne sont pas remplies.
  
  Référence : 1984-0023
  Cliquez sur le lien ci-dessous pour ouvrir votre document:
  https://mysagw.local/cases/my-case-id
  
  Si vous avez des questions, n’hésitez pas à nous contacter à l’adresse sagw@sagw.ch, au numéro de téléphone +41 31 306 92 50 ou via www.sagw.ch/kontakt-mysagw. Nous vous prions de toujours indiquer le numéro de référence lorsque vous posez une question.
  
  Avec nos meilleures salutations,
  
  Votre équipe de l’ASSH
  
  ******
  
  Ceci est un message électronique généré automatiquement, merci de ne pas y répondre. Vous trouverez les coordonnées de l'ASSH sur la page suivante :
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[decision-and-credit-False-True-de]
  'Early Career Award: Final decision'
# ---
# name: test_send_work_item_mail[decision-and-credit-False-True-de].1
  '''
  Dear Winston Smith
  
  We regret to inform you that you are not among the three prizewinners or finalists of the Early Career Award.
  On behalf of the jury, we thank you for your understanding and wish you all the best for your academic future.
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website:
  https://www.sagw.ch/sagw/foerderung/early-career-award
  '''
# ---
# name: test_send_work_item_mail[decision-and-credit-False-True-en]
  'Early Career Award: Final decision'
# ---
# name: test_send_work_item_mail[decision-and-credit-False-True-en].1
  '''
  Dear Winston Smith
  
  We regret to inform you that you are not among the three prizewinners or finalists of the Early Career Award.
  On behalf of the jury, we thank you for your understanding and wish you all the best for your academic future.
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website:
  https://www.sagw.ch/sagw/foerderung/early-career-award
  '''
# ---
# name: test_send_work_item_mail[decision-and-credit-False-True-fr]
  'Early Career Award: Final decision'
# ---
# name: test_send_work_item_mail[decision-and-credit-False-True-fr].1
  '''
  Dear Winston Smith
  
  We regret to inform you that you are not among the three prizewinners or finalists of the Early Career Award.
  On behalf of the jury, we thank you for your understanding and wish you all the best for your academic future.
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website:
  https://www.sagw.ch/sagw/foerderung/early-career-award
  '''
# ---
# name: test_send_work_item_mail[review-document-False-False-de]
  'Neue Informationen zu 1984-0023'
# ---
# name: test_send_work_item_mail[review-document-False-False-de].1
  '''
  Guten Tag Winston Smith
  
  Die Schweizerische Akademie der Geistes- und Sozialwissenschaften (SAGW) hat Ihr oben genanntes Gesuch geprüft. Leider müssen wir Ihnen mitteilen, dass wir Ihrem Antrag nicht entsprechen können, da die formellen oder materiellen Voraussetzungen dafür nicht gegeben sind.
  
  Referenz: 1984-0023
  Über den nachfolgenden Link können Sie direkt auf Ihr Dokument zugreifen:
  https://mysagw.local/cases/my-case-id
  
  Sollten Sie Fragen haben, können Sie uns gerne über sagw@sagw.ch, die Telefonnummer +41 31 306 92 50 oder unter www.sagw.ch/kontakt-mysagw kontaktieren. Gerne bitten wir Sie, bei einer Frage immer die Referenznummer anzugeben.
  
  Freundliche Grüsse
  
  Ihr SAGW-Team
  
  ******
  
  Dies ist eine automatisch generierte Email, bitte antworten Sie nicht auf diese Nachricht. Die Kontaktangaben der SAGW können Sie der nachfolgenden Seite entnehmen:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[review-document-False-False-en]
  'New information concerning 1984-0023'
# ---
# name: test_send_work_item_mail[review-document-False-False-en].1
  '''
  Dear Winston Smith
  
  The Swiss Academy of Humanities and Social Sciences (SAGW/SAHS) has reviewed your request. Unfortunately, we have to inform you that your request cannot be granted since the formal or the material criteria are not being fulfilled.
  
  Reference: 1984-0023
  You can access your document via the following link:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us via e-mail (sagw@sagw.ch), phone (+41 31 306 92 50) or online (www.sagw.ch/kontakt-mysagw). Please bear in mind to state the reference number of your application.
  
  Yours sincerely
  
  Your SAGW team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of SASH can be found on the following website:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[review-document-False-False-fr]
  'Nouvelles informations concernant 1984-0023'
# ---
# name: test_send_work_item_mail[review-document-False-False-fr].1
  '''
  Bonjour Winston Smith
  
  L’Académie suisse des sciences humaines et sociales (ASSH) a examiné votre requête susmentionnée. Malheureusement, nous devons vous informer que nous ne pouvons pas donner suite à votre demande, car les conditions formelles ou les conditions matérielles pour un soutien ne sont pas remplies.
  
  Référence : 1984-0023
  Cliquez sur le lien ci-dessous pour ouvrir votre document:
  https://mysagw.local/cases/my-case-id
  
  Si vous avez des questions, n’hésitez pas à nous contacter à l’adresse sagw@sagw.ch, au numéro de téléphone +41 31 306 92 50 ou via www.sagw.ch/kontakt-mysagw. Nous vous prions de toujours indiquer le numéro de référence lorsque vous posez une question.
  
  Avec nos meilleures salutations,
  
  Votre équipe de l’ASSH
  
  ******
  
  Ceci est un message électronique généré automatiquement, merci de ne pas y répondre. Vous trouverez les coordonnées de l'ASSH sur la page suivante :
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[review-document-False-True-de]
  'Early Career Award: Administrative verification'
# ---
# name: test_send_work_item_mail[review-document-False-True-de].1
  '''
  Dear Winston Smith
  
  Following the administrative verification by the Secretary of the Swiss Academy of Humanities and Social Sciences, we regret to inform you that your application does not fulfill the eligibility criteria and therefore cannot be accepted.
  
  Reference: 1984-0023
  
  You can access your online application form via the following link, where you will find further information regarding the administrative verification:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us at sagw@sagw.ch or by phone at +41 31 306 92 50
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website: www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[review-document-False-True-en]
  'Early Career Award: Administrative verification'
# ---
# name: test_send_work_item_mail[review-document-False-True-en].1
  '''
  Dear Winston Smith
  
  Following the administrative verification by the Secretary of the Swiss Academy of Humanities and Social Sciences, we regret to inform you that your application does not fulfill the eligibility criteria and therefore cannot be accepted.
  
  Reference: 1984-0023
  
  You can access your online application form via the following link, where you will find further information regarding the administrative verification:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us at sagw@sagw.ch or by phone at +41 31 306 92 50
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website: www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[review-document-False-True-fr]
  'Early Career Award: Administrative verification'
# ---
# name: test_send_work_item_mail[review-document-False-True-fr].1
  '''
  Dear Winston Smith
  
  Following the administrative verification by the Secretary of the Swiss Academy of Humanities and Social Sciences, we regret to inform you that your application does not fulfill the eligibility criteria and therefore cannot be accepted.
  
  Reference: 1984-0023
  
  You can access your online application form via the following link, where you will find further information regarding the administrative verification:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us at sagw@sagw.ch or by phone at +41 31 306 92 50
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website: www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[revise-document-False-False-de]
  'Neue Informationen zu 1984-0023'
# ---
# name: test_send_work_item_mail[revise-document-False-False-de].1
  '''
  Guten Tag Winston Smith
  
  Wir benötigen noch weitere Angaben zum Gesuch:
  
  Referenz: 1984-0023
  Über den nachfolgenden Link können Sie direkt auf Ihr Dokument zugreifen, wo Sie die Angaben zu den noch benötigten Informationen finden:
  https://mysagw.local/cases/my-case-id
  
  Sollten Sie Fragen haben, können Sie uns gerne über sagw@sagw.ch, die Telefonnummer +41 31 306 92 50 oder unter www.sagw.ch/kontakt-mysagw kontaktieren. Gerne bitten wir Sie, bei einer Frage immer die Referenznummer anzugeben.
  
  Freundliche Grüsse
  
  Ihr SAGW-Team
  
  ******
  
  Dies ist eine automatisch generierte Email, bitte antworten Sie nicht auf diese Nachricht. Die Kontaktangaben der SAGW können Sie der nachfolgenden Seite entnehmen:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[revise-document-False-False-en]
  'New information concerning 1984-0023'
# ---
# name: test_send_work_item_mail[revise-document-False-False-en].1
  '''
  Dear Winston Smith
  
  Please note that further information is required for the following application:
  
  Reference: 1984-0023
  You can access your document via the following link:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us via e-mail (sagw@sagw.ch), phone (+41 31 306 92 50) or online (www.sagw.ch/kontakt-mysagw). Please bear in mind to state the reference number of your application.
  
  Yours sincerely
  
  Your SAGW team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of SASH can be found on the following website:
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[revise-document-False-False-fr]
  'Nouvelles informations concernant 1984-0023'
# ---
# name: test_send_work_item_mail[revise-document-False-False-fr].1
  '''
  Bonjour Winston Smith
  
  Nous avons besoin d’informations supplémentaires sur la requête suivante:
  
  Référence : 1984-0023
  Le lien ci-dessous vous permet d’accéder directement à votre document, où vous trouverez les indications sur les informations à fournir:
  https://mysagw.local/cases/my-case-id
  
  Si vous avez des questions, n’hésitez pas à nous contacter à l’adresse sagw@sagw.ch, au numéro de téléphone +41 31 306 92 50 ou via www.sagw.ch/kontakt-mysagw. Nous vous prions de toujours indiquer le numéro de référence lorsque vous posez une question.
  
  Avec nos meilleures salutations,
  
  Votre équipe de l’ASSH
  
  ******
  
  Ceci est un message électronique généré automatiquement, merci de ne pas y répondre. Vous trouverez les coordonnées de l'ASSH sur la page suivante :
  www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[revise-document-False-True-de]
  'Early Career Award: Incomplete application'
# ---
# name: test_send_work_item_mail[revise-document-False-True-de].1
  '''
  Dear Winston Smith
  
  To complete the verification of your application’s formal eligibility for our Early Career Award, we require additional information. We kindly ask you to submit the missing information as soon as possible.
  
  Reference: 1984-0023
  
  You can access your online application form via the following link, where you will find details of the information that is still required:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us at sagw@sagw.ch or by phone at +41 31 306 92 50.
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website: www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[revise-document-False-True-en]
  'Early Career Award: Incomplete application'
# ---
# name: test_send_work_item_mail[revise-document-False-True-en].1
  '''
  Dear Winston Smith
  
  To complete the verification of your application’s formal eligibility for our Early Career Award, we require additional information. We kindly ask you to submit the missing information as soon as possible.
  
  Reference: 1984-0023
  
  You can access your online application form via the following link, where you will find details of the information that is still required:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us at sagw@sagw.ch or by phone at +41 31 306 92 50.
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website: www.sagw.ch/kontakt-mysagw
  
  '''
# ---
# name: test_send_work_item_mail[revise-document-False-True-fr]
  'Early Career Award: Incomplete application'
# ---
# name: test_send_work_item_mail[revise-document-False-True-fr].1
  '''
  Dear Winston Smith
  
  To complete the verification of your application’s formal eligibility for our Early Career Award, we require additional information. We kindly ask you to submit the missing information as soon as possible.
  
  Reference: 1984-0023
  
  You can access your online application form via the following link, where you will find details of the information that is still required:
  https://mysagw.local/cases/my-case-id
  
  If you have any questions, please contact us at sagw@sagw.ch or by phone at +41 31 306 92 50.
  
  Yours sincerely,
  
  The SAGW Team
  
  ******
  
  This is an automatically generated message. Please do not reply. The contact details of the Swiss Academy of Humanities and Social Sciences can be found on the following website: www.sagw.ch/kontakt-mysagw
  
  '''
# ---
